refactor(env):add security to MongoDb key

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGO_URI=mongodb+srv://marceloprado2024marmarcelo_db_user:YCsDKPDEj3w3yo3a@cluster0.tf9gabn.mongodb.net/
+MONGO_URI=mongodb+srv://marceloprado2024marmarcelo_db_user:l6Dynj5oeb0ST1q8@cluster0.tf9gabn.mongodb.net/
